# radio-qt

./: .codex  .gitignore  CLI.md  CONTEXT.md  README.md  pyproject.toml  requirements-system.txt
.github/workflows/: ci.yml  release.yml
config/: db.sqlite  settings.yaml
docs/: RELEASE_CHECKLIST.md
icecast/: bluetooth.sh  icecast.sh  icecast.xml
radioqt/: __init__.py  __main__.py  app_config.py  cron.py  duration_probe.py  main.py  models.py  player.py  schedule_logic.py  scheduler.py  storage.py  ui.py  ui_handlers.py  ui_playback_handlers.py
radioqt/app_config/: _shared.py  core.py  io.py  parser.py  schema.py  serializer.py
radioqt/duration_probe/: __init__.py  cache.py  ffprobe.py  probe.py
radioqt/main/: __init__.py  application.py  bootstrap.py  cli.py
radioqt/playback/: __init__.py  orchestration.py
radioqt/schedule_logic/: __init__.py
radioqt/scheduling/: __init__.py  cron_runtime.py  logic.py  mutations.py  state.py
radioqt/storage/: __init__.py  sqlite_store.py  write.py
radioqt/ui/: __init__.py  handlers.py  (+8 more)
state/: radio_state.db  radio_state.json
tests/: test_cli_smoke.py  test_now_playing_label.py  test_playback_error_recovery.py  test_playback_orchestration_status.py  test_player_source_resolution.py  test_runtime_control.py  test_runtime_logs.py  test_runtime_status.py  test_schedule_start_fired_transition.py  test_scheduler_playback_e2e.py  test_scheduling_workflows.py  test_startup_recovery.py  test_state_persistence_recovery.py  test_state_persistence_save_failures.py  test_storage_concurrency.py  test_volume_fade_logic.py
(+56 files in other folders)
