[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radioqt"
version = "0.1.3"
description = "Scheduled multimedia player for radio automation workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[project.scripts]
radioqt = "radioqt.main:run"
radioqt-cli = "radioqt.cli:run"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
radioqt = ["radioqt.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra"
